# rusty-xinput-detour

./: Cargo.toml  README.md  package-lock.json
src/: main.rs
xinput_detour_dll/: Cargo.toml
xinput_detour_dll/src/: function_scheduler.rs  lib.rs  mutable_xinput_state.rs
xinput_detour_dll/src/helpers/: function_scheduler.rs  handle_controller_state.rs  mod.rs
