[package]
name = "rusty_xinput_external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members= ["xinput_detour_dll"]

[dependencies]
dll-syringe = "0.15.0"
toy-arms = {version = "0.9.4", features = ["external"]}
xinput_detour_dll = {path = "xinput_detour_dll"}