[package]
name = "xinput_detour_dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocket_league_hook"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.24"
retour = { version = "0.3", features = ["static-detour"] }
dialog = "0.3.0"
minhook-sys = "0.1.1"
once_cell = "1.17.1"
rusty-xinput = "1.2.0"
toy-arms = {version = "0.9.4", features = ["external"]}
winapi = { version = "0.3.9", features = ["winuser","wincontypes", "libloaderapi"] }

[build]
target = "x86_64-pc-windows-msvc"
